[gd_scene load_steps=2 format=3 uid="uid://crplqufay3um0"]

[ext_resource type="Script" path="res://UIObjects/problem_display_ui.gd" id="1_ah1cr"]

[node name="ProblemDisplayUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 644.0
offset_bottom = 807.0
scale = Vector2(0.965527, 0.601282)
script = ExtResource("1_ah1cr")

[node name="problemMargin" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 474.0
offset_bottom = 807.0
scale = Vector2(1.40075, 0.988939)
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30

[node name="problemContainer" type="VBoxContainer" parent="problemMargin"]
layout_mode = 2

[node name="QuestionText" type="Label" parent="problemMargin/problemContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "my balls hurt dadadaddadadadadadadadadadadadadadadada"
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="problemMargin/problemContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="problemMargin/problemContainer"]
layout_mode = 2

[node name="aRow" type="HBoxContainer" parent="problemMargin/problemContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="answerButton" type="Button" parent="problemMargin/problemContainer/VBoxContainer/aRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "A"
flat = true

[node name="VSeparator" type="VSeparator" parent="problemMargin/problemContainer/VBoxContainer/aRow"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="answerText" type="Label" parent="problemMargin/problemContainer/VBoxContainer/aRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "my balls hurt"
vertical_alignment = 1
autowrap_mode = 3

[node name="spacer" type="Control" parent="problemMargin/problemContainer/VBoxContainer"]
layout_mode = 2

[node name="bRow" type="HBoxContainer" parent="problemMargin/problemContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="answerButton" type="Button" parent="problemMargin/problemContainer/VBoxContainer/bRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "B"
flat = true

[node name="VSeparator" type="VSeparator" parent="problemMargin/problemContainer/VBoxContainer/bRow"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="answerText" type="Label" parent="problemMargin/problemContainer/VBoxContainer/bRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "my balls hurt"
vertical_alignment = 1
autowrap_mode = 3

[node name="spacer2" type="Control" parent="problemMargin/problemContainer/VBoxContainer"]
layout_mode = 2

[node name="cRow" type="HBoxContainer" parent="problemMargin/problemContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="answerButton" type="Button" parent="problemMargin/problemContainer/VBoxContainer/cRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "C"
flat = true

[node name="VSeparator" type="VSeparator" parent="problemMargin/problemContainer/VBoxContainer/cRow"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="answerText" type="Label" parent="problemMargin/problemContainer/VBoxContainer/cRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "my balls hurt"
vertical_alignment = 1
autowrap_mode = 3

[node name="spacer3" type="Control" parent="problemMargin/problemContainer/VBoxContainer"]
layout_mode = 2

[node name="dRow" type="HBoxContainer" parent="problemMargin/problemContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="answerButton" type="Button" parent="problemMargin/problemContainer/VBoxContainer/dRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "D"
flat = true

[node name="VSeparator" type="VSeparator" parent="problemMargin/problemContainer/VBoxContainer/dRow"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="answerText" type="Label" parent="problemMargin/problemContainer/VBoxContainer/dRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "my balls hurt"
vertical_alignment = 1
autowrap_mode = 3

[node name="submitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -77.0
offset_bottom = -46.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1, 0.995594)
text = "SUBMIT"

[connection signal="pressed" from="problemMargin/problemContainer/VBoxContainer/aRow/answerButton" to="." method="_on_a_button_pressed"]
[connection signal="pressed" from="problemMargin/problemContainer/VBoxContainer/bRow/answerButton" to="." method="_on_b_button_pressed"]
[connection signal="pressed" from="problemMargin/problemContainer/VBoxContainer/cRow/answerButton" to="." method="_on_c_button_pressed"]
[connection signal="pressed" from="problemMargin/problemContainer/VBoxContainer/dRow/answerButton" to="." method="_on_d_button_pressed"]
[connection signal="pressed" from="submitButton" to="." method="_on_submit_button_pressed"]
